--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,7 @@ dependencies = [
 
 [project.urls]
 "Homepage" = "https://github.com/stepfnAI/cleaning_agent"
-"Bug Tracker" = "https://github.com/stepfnAI/cleaning_agent/issues" 
+"Bug Tracker" = "https://github.com/stepfnAI/cleaning_agent/issues"
+
+[tool.hatch.build.targets.wheel]
+packages = ["."]
