--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,44 @@
-myenv
 .env
+*.env
+.env.*
+!.env.example
+__pycache__/
+*.py[cod]
+*$py.class
+.venv
+venv/
+myenv/
 *.pyc
 *.log
-*.csv
+dist/
+build/
+*.egg-info/
+temp_files/
+*.so
+.Python
+develop-eggs/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.installed.cfg
+*.egg
+
+# Environment
+.env
+.venv
+env/
+venv/
+ENV/
+myenv/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
